--- a/01_imports.ipynb
+++ b/01_imports.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "10ca8b02",
+   "id": "91167f78",
    "metadata": {},
    "source": [
     "# Imports\n",
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "91504d89",
+   "id": "c1abee7b",
    "metadata": {},
    "source": [
     "List of all packages and objects which should be imported and accessible from the guided dive notebook"
@@ -37,7 +37,7 @@
     "# | export\n",
     "print('start imports')\n",
     "\n",
-    "__all__ = ['np', 'pd','shutil', 'Path', 'duckduckgo_search', 'display_image_cleaner']"
+    "__all__ = ['np', 'pd','shutil', 'Path', 'duckduckgo_search', 'display_image_cleaner', 'clean_image_directory', 'gv']"
    ]
   },
   {
@@ -65,7 +65,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d0acdf09",
+   "id": "4a6bcd0e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +90,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "90410e99",
+   "id": "fa24d486",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,17 +114,17 @@
    "outputs": [],
    "source": [
     "# | export\n",
-    "def gv(s): \n",
-    "    return graphviz.Source('digraph G{ rankdir=\"LR\"' + s + '; }')\n",
-    "\n",
-    "# Prepare diagram 'Top Level'\n",
-    "top_level = '''ordering=in\n",
+    "def gv(code=None): \n",
+    "    if s is None:\n",
+    "        code = '''ordering=in\n",
     "            problem[shape=cds width=1 height=1 label=\"1\\nFrame business problem \\ninto a ML problem\"]\n",
     "            data[shape=cylinder width=1 height=1 label=\"2\\nCollect, and prepare \\ndata, incl. labeling\"]\n",
     "            modeling[shape=box3d width=1 height=1 label=\"3\\nBuild model \\nand train it\"]\n",
     "            evaluate[shape=component width=1 height=1 label=\"4\\nEvaluate and \\nvalidate model\"]\n",
     "            improve[shape=rarrow width=1 height=1 label=\"5\\nImprove model to \\nreach expected standard\"]\n",
-    "            problem->data->modeling->evaluate->improve'''"
+    "            problem->data->modeling->evaluate->improve'''\n",
+    "        \n",
+    "        return graphviz.Source('digraph G{ rankdir=\"LR\"' + code + '; }')"
    ]
   },
   {
@@ -133,7 +133,19 @@
    "id": "fb1f2c1d",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# | export\n",
+    "def clean_image_directory(path):\n",
+    "    def check_img(img):\n",
+    "        try: _ = Image.open(img)\n",
+    "        except Exception as e:\n",
+    "            img = str(img).replace(\" \",\"\\ \")\n",
+    "            os.system(f\"rm -f {img}\");print(f\"removing error img:{img}\")\n",
+    "\n",
+    "    for cls in path.iterdir():\n",
+    "        for img in cls.iterdir():\n",
+    "            check_img(img)"
+   ]
   }
  ],
  "metadata": {
