--- a/01_imports.ipynb
+++ b/01_imports.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "91167f78",
+   "id": "d4b2fa99",
    "metadata": {},
    "source": [
     "# Imports\n",
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c1abee7b",
+   "id": "ba53e581",
    "metadata": {},
    "source": [
     "List of all packages and objects which should be imported and accessible from the guided dive notebook"
@@ -65,7 +65,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4a6bcd0e",
+   "id": "e9f41a3f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,16 +73,14 @@
     "mpl.rcParams['savefig.dpi']= 200\n",
     "mpl.rcParams['font.size']=12\n",
     "\n",
-    "set_seed(88)\n",
+    "# set_seed(88)\n",
     "\n",
-    "torch.backends.cudnn.deterministic = True\n",
-    "torch.backends.cudnn.benchmark = False\n",
-    "torch.set_printoptions(linewidth=200)\n",
+    "# torch.backends.cudnn.deterministic = True\n",
+    "# torch.backends.cudnn.benchmark = False\n",
+    "# torch.set_printoptions(linewidth=200)\n",
     "\n",
     "np.set_printoptions(linewidth=200)\n",
     "pd.set_option('display.max_columns',999)\n",
-    "\n",
-    "\n",
     "\n",
     "print('import and configurations finished')"
    ]
@@ -90,7 +88,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fa24d486",
+   "id": "2c524b50",
    "metadata": {},
    "outputs": [],
    "source": [
