add PIL in imports

--- a/01_imports.ipynb
+++ b/01_imports.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "d4b2fa99",
+   "id": "72fe1697",
    "metadata": {},
    "source": [
     "# Imports\n",
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ba53e581",
+   "id": "76c9db8d",
    "metadata": {},
    "source": [
     "List of all packages and objects which should be imported and accessible from the guided dive notebook"
@@ -57,6 +57,7 @@
     "from jmd_imagescraper.core import duckduckgo_search\n",
     "from jmd_imagescraper.imagecleaner import display_image_cleaner\n",
     "from pathlib import Path\n",
+    "from PIL import Image\n",
     "\n",
     "# from pandas.api.types import CategoricalDtype\n",
     "# from scipy.cluster import hierarchy as hc"
@@ -65,7 +66,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e9f41a3f",
+   "id": "e511ccaf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +89,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2c524b50",
+   "id": "4ca2a659",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,7 +114,7 @@
    "source": [
     "# | export\n",
     "def gv(code=None): \n",
-    "    if s is None:\n",
+    "    if code is None:\n",
     "        code = '''ordering=in\n",
     "            problem[shape=cds width=1 height=1 label=\"1\\nFrame business problem \\ninto a ML problem\"]\n",
     "            data[shape=cylinder width=1 height=1 label=\"2\\nCollect, and prepare \\ndata, incl. labeling\"]\n",
