add mount_drive to imports

--- a/01_imports.ipynb
+++ b/01_imports.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "72fe1697",
+   "id": "8079d058",
    "metadata": {},
    "source": [
     "# Imports\n",
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "76c9db8d",
+   "id": "ef7aa220",
    "metadata": {},
    "source": [
     "List of all packages and objects which should be imported and accessible from the guided dive notebook"
@@ -35,7 +35,6 @@
    "outputs": [],
    "source": [
     "# | export\n",
-    "print('start imports')\n",
     "\n",
     "__all__ = ['np', 'pd','shutil', 'Path', 'duckduckgo_search', 'display_image_cleaner', 'clean_image_directory', 'gv']"
    ]
@@ -48,6 +47,7 @@
    "outputs": [],
    "source": [
     "# | export\n",
+    "\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "import graphviz\n",
@@ -59,50 +59,55 @@
     "from pathlib import Path\n",
     "from PIL import Image\n",
     "\n",
-    "# from pandas.api.types import CategoricalDtype\n",
-    "# from scipy.cluster import hierarchy as hc"
+    "from pandas.api.types import CategoricalDtype\n",
+    "from scipy.cluster import hierarchy as hc"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e511ccaf",
+   "id": "42b2309b",
    "metadata": {},
    "outputs": [],
    "source": [
     "# | export\n",
-    "mpl.rcParams['savefig.dpi']= 200\n",
-    "mpl.rcParams['font.size']=12\n",
     "\n",
-    "# set_seed(88)\n",
+    "def config_fastai_for_colab():\n",
+    "    mpl.rcParams['savefig.dpi']= 200\n",
+    "    mpl.rcParams['font.size']=12\n",
     "\n",
-    "# torch.backends.cudnn.deterministic = True\n",
-    "# torch.backends.cudnn.benchmark = False\n",
-    "# torch.set_printoptions(linewidth=200)\n",
+    "    set_seed(88)\n",
     "\n",
-    "np.set_printoptions(linewidth=200)\n",
-    "pd.set_option('display.max_columns',999)\n",
+    "    torch.backends.cudnn.deterministic = True\n",
+    "    torch.backends.cudnn.benchmark = False\n",
+    "    torch.set_printoptions(linewidth=200)\n",
     "\n",
-    "print('import and configurations finished')"
+    "    np.set_printoptions(linewidth=200)\n",
+    "    pd.set_option('display.max_columns',999)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4ca2a659",
+   "id": "47360bee",
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
+    "# | export\n",
     "def mount_gdrive(path_to_ds=None):\n",
-    "    drive.mount('/content/gdrive')\n",
+    "\n",
     "    if path_to_ds is None:\n",
     "        dataset = Path('/content/gdrive/MyDrive/img-ds.zip')\n",
     "    else:\n",
     "        dataset = Path(path_to_ds)\n",
-    "    \n",
-    "    if not dataset.is_file():\n",
-    "        raise ValueError(f\"Dataset cannot be found at <{dataset.absolute()}> \")\n"
+    "\n",
+    "    try:\n",
+    "        from google.colab import drive\n",
+    "        drive.mount('/content/gdrive')\n",
+    "        if not dataset.is_file():\n",
+    "            raise ValueError(f\"Dataset cannot be found at <{dataset.absolute()}> \")\n",
+    "    except:\n",
+    "        print('This notebook should be run on Google Colab')\n"
    ]
   },
   {
