add import for config_fastai_for_colab

--- a/01_imports.ipynb
+++ b/01_imports.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "8079d058",
+   "id": "31daac7d",
    "metadata": {},
    "source": [
     "# Imports\n",
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ef7aa220",
+   "id": "a2269d75",
    "metadata": {},
    "source": [
     "List of all packages and objects which should be imported and accessible from the guided dive notebook"
@@ -36,7 +36,10 @@
    "source": [
     "# | export\n",
     "\n",
-    "__all__ = ['np', 'pd','shutil', 'Path', 'duckduckgo_search', 'display_image_cleaner', 'clean_image_directory', 'gv']"
+    "__all__ = ['np', 'pd','shutil', \n",
+    "           'Path', \n",
+    "           'duckduckgo_search', 'display_image_cleaner', 'clean_image_directory', 'gv', 'config_fastai_for_colab'\n",
+    "          ]"
    ]
   },
   {
@@ -53,7 +56,9 @@
     "import graphviz\n",
     "import matplotlib as mpl\n",
     "import shutil\n",
+    "import torch\n",
     "\n",
+    "from fastai.vision.all import set_seed\n",
     "from jmd_imagescraper.core import duckduckgo_search\n",
     "from jmd_imagescraper.imagecleaner import display_image_cleaner\n",
     "from pathlib import Path\n",
@@ -66,12 +71,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "42b2309b",
+   "id": "ca590510",
    "metadata": {},
    "outputs": [],
    "source": [
     "# | export\n",
-    "\n",
     "def config_fastai_for_colab():\n",
     "    mpl.rcParams['savefig.dpi']= 200\n",
     "    mpl.rcParams['font.size']=12\n",
@@ -89,7 +93,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "47360bee",
+   "id": "6fb8993e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +111,7 @@
     "        if not dataset.is_file():\n",
     "            raise ValueError(f\"Dataset cannot be found at <{dataset.absolute()}> \")\n",
     "    except:\n",
-    "        print('This notebook should be run on Google Colab')\n"
+    "        print('This notebook should be run on Google Colab')"
    ]
   },
   {
@@ -139,16 +143,19 @@
    "outputs": [],
    "source": [
     "# | export\n",
-    "def clean_image_directory(path):\n",
+    "def clean_image_directory(path, verbose=False):\n",
     "    def check_img(img):\n",
     "        try: _ = Image.open(img)\n",
     "        except Exception as e:\n",
     "            img = str(img).replace(\" \",\"\\ \")\n",
-    "            os.system(f\"rm -f {img}\");print(f\"removing error img:{img}\")\n",
+    "            os.system(f\"rm -f {img}\");\n",
+    "            print(f\"removing error img:{img}\")\n",
     "\n",
     "    for cls in path.iterdir():\n",
-    "        for img in cls.iterdir():\n",
-    "            check_img(img)"
+    "        for i, img in enumerate(cls.iterdir()):\n",
+    "            if verbose: print(i, end=' - ')\n",
+    "            check_img(img)\n",
+    "            print('\\n')"
    ]
   }
  ],
