mute warnings, improve config, correct __all__

--- a/01_imports.ipynb
+++ b/01_imports.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "31daac7d",
+   "id": "aecf511d",
    "metadata": {},
    "source": [
     "# Imports\n",
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a2269d75",
+   "id": "0b457109",
    "metadata": {},
    "source": [
     "List of all packages and objects which should be imported and accessible from the guided dive notebook"
@@ -35,11 +35,11 @@
    "outputs": [],
    "source": [
     "# | export\n",
-    "\n",
-    "__all__ = ['np', 'pd','shutil', \n",
-    "           'Path', \n",
-    "           'duckduckgo_search', 'display_image_cleaner', 'clean_image_directory', 'gv', 'config_fastai_for_colab'\n",
-    "          ]"
+    "imported_objects  = ['np', 'pd','shutil', 'Path', 'duckduckgo_search', 'display_image_cleaner']\n",
+    "try:\n",
+    "    __all__.extend(imported_objects)\n",
+    "except:\n",
+    "    __all__ = imported_objects"
    ]
   },
   {
@@ -57,6 +57,7 @@
     "import matplotlib as mpl\n",
     "import shutil\n",
     "import torch\n",
+    "import warnings\n",
     "\n",
     "from fastai.vision.all import set_seed\n",
     "from jmd_imagescraper.core import duckduckgo_search\n",
@@ -71,29 +72,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ca590510",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# | export\n",
-    "def config_fastai_for_colab():\n",
-    "    mpl.rcParams['savefig.dpi']= 200\n",
-    "    mpl.rcParams['font.size']=12\n",
-    "\n",
-    "    set_seed(88)\n",
-    "\n",
-    "    torch.backends.cudnn.deterministic = True\n",
-    "    torch.backends.cudnn.benchmark = False\n",
-    "    torch.set_printoptions(linewidth=200)\n",
-    "\n",
-    "    np.set_printoptions(linewidth=200)\n",
-    "    pd.set_option('display.max_columns',999)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6fb8993e",
+   "id": "fe3db6ac",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,22 +96,55 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "7d95284a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# | export\n",
+    "def config_fastai_for_colab():\n",
+    "    \n",
+    "    warnings.filterwarnings('ignore')\n",
+    "    \n",
+    "    # matplotlib settings\n",
+    "    mpl.rcParams['savefig.dpi']= 200\n",
+    "    mpl.rcParams['font.size']=12\n",
+    "    \n",
+    "    # fastai seed\n",
+    "    set_seed(88)\n",
+    "    \n",
+    "    # pytorch settings\n",
+    "    torch.backends.cudnn.deterministic = True\n",
+    "    torch.backends.cudnn.benchmark = False\n",
+    "    torch.set_printoptions(linewidth=200)\n",
+    "\n",
+    "    # numpy and pandas settings\n",
+    "    np.set_printoptions(linewidth=200)\n",
+    "    pd.set_option('display.max_columns',999)\n",
+    "    \n",
+    "    # mount goggle gdrive\n",
+    "    mount_gdrive()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "207ca5a1",
    "metadata": {},
    "outputs": [],
    "source": [
     "# | export\n",
     "def gv(code=None): \n",
-    "    if code is None:\n",
-    "        code = '''ordering=in\n",
-    "            problem[shape=cds width=1 height=1 label=\"1\\nFrame business problem \\ninto a ML problem\"]\n",
-    "            data[shape=cylinder width=1 height=1 label=\"2\\nCollect, and prepare \\ndata, incl. labeling\"]\n",
-    "            modeling[shape=box3d width=1 height=1 label=\"3\\nBuild model \\nand train it\"]\n",
-    "            evaluate[shape=component width=1 height=1 label=\"4\\nEvaluate and \\nvalidate model\"]\n",
-    "            improve[shape=rarrow width=1 height=1 label=\"5\\nImprove model to \\nreach expected standard\"]\n",
-    "            problem->data->modeling->evaluate->improve'''\n",
-    "        \n",
-    "        return graphviz.Source('digraph G{ rankdir=\"LR\"' + code + '; }')"
+    "    return graphviz.Source('digraph G{ rankdir=\"LR\"' + code + '; }')\n",
+    "\n",
+    "def ml_process():\n",
+    "    code = '''ordering=in\n",
+    "        problem[shape=cds width=1 height=1 label=\"1\\nFrame business problem \\ninto a ML problem\"]\n",
+    "        data[shape=cylinder width=1 height=1 label=\"2\\nCollect, and prepare \\ndata, incl. labeling\"]\n",
+    "        modeling[shape=box3d width=1 height=1 label=\"3\\nBuild model \\nand train it\"]\n",
+    "        evaluate[shape=component width=1 height=1 label=\"4\\nEvaluate and \\nvalidate model\"]\n",
+    "        improve[shape=rarrow width=1 height=1 label=\"5\\nImprove model to \\nreach expected standard\"]\n",
+    "        problem->data->modeling->evaluate->improve'''\n",
+    "    return gv(code)"
    ]
   },
   {
@@ -155,7 +167,7 @@
     "        for i, img in enumerate(cls.iterdir()):\n",
     "            if verbose: print(i, end=' - ')\n",
     "            check_img(img)\n",
-    "            print('\\n')"
+    "            if verbose: print('\\n')"
    ]
   }
  ],
