--- a/01_imports.ipynb
+++ b/01_imports.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "aecf511d",
+   "id": "2b367396",
    "metadata": {},
    "source": [
     "# Imports\n",
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0b457109",
+   "id": "64f5b6f7",
    "metadata": {},
    "source": [
     "List of all packages and objects which should be imported and accessible from the guided dive notebook"
@@ -72,7 +72,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fe3db6ac",
+   "id": "43bd9ecf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +96,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7d95284a",
+   "id": "4471367a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,6 +169,26 @@
     "            check_img(img)\n",
     "            if verbose: print('\\n')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "5b544ea9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# | export\n",
+    "\n",
+    "def count_files(path):\n",
+    "    \"\"\"Count the number if files in the folder pointed as path, and its subfolders\"\"\"\n",
+    "    if isinstance(path, str): path = Path(path)\n",
+    "    nb_img = len([f for f in path.iterdir() if f.is_file()])\n",
+    "    if nb_img > 0:\n",
+    "        print(f\"{nb_img:,d} in folder {path.name}\")\n",
+    "    for d in [d for d in path.iterdir() if d.is_dir()]:\n",
+    "        nb_img = len([f for f in d.iterdir() if f.is_file()])\n",
+    "        print(f\"{nb_img:,d} in folder {d.name}\")"
+   ]
   }
  ],
  "metadata": {
@@ -176,6 +196,31 @@
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.12"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": false,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": false
   }
  },
  "nbformat": 4,
