--- a/01_imports.ipynb
+++ b/01_imports.ipynb
@@ -189,6 +189,31 @@
     "        nb_img = len([f for f in d.iterdir() if f.is_file()])\n",
     "        print(f\"{nb_img:,d} in folder {d.name}\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d41e68b2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# | export\n",
+    "\n",
+    "def print_metrics(cm):\n",
+    "    \"\"\"Print FP, FN, Accuracy, Precision  and Recall\"\"\"\n",
+    "    nb_val_im = cm.sum()\n",
+    "    true_nb_im_per_class = cm.sum(axis=1)\n",
+    "    pred_nb_im_per_class = cm.sum(axis=0)\n",
+    "\n",
+    "    print(f\"Accurate predictions:               {cm[0,0] + cm[1,1]:3d} out of {nb_val_im:,d} validation images\") \n",
+    "    print(f\"False Positive preds:               {cm[0,1]:3d} images classified as 'without_mask' but actually should be `with_mask`)\")   \n",
+    "    print(f\"False Negative preds:               {cm[1,0]:3d} images classified as `with_mask` but actually should be `without_mask`)\")\n",
+    "    print()\n",
+    "    print(f\"Accuracy:                           {cm.diagonal().sum()/nb_val_im * 100:6.2f} %\") \n",
+    "    print(f\"Precision for 'without_mask' preds: {cm[1, 1]/pred_nb_im_per_class[1] * 100:6.2f} %\")   \n",
+    "    print(f\"Recall for 'without_mask' preds:    {cm[1,1]/true_nb_im_per_class[1] * 100:6.2f} %\")\n",
+    "    "
+   ]
   }
  ],
  "metadata": {
