pass path to config_fastai_for_colab

--- a/01_vision.ipynb
+++ b/01_vision.ipynb
@@ -101,7 +101,7 @@
    "outputs": [],
    "source": [
     "# | export\n",
-    "def config_fastai_for_colab():\n",
+    "def config_fastai_for_colab(path_to_ds=None):\n",
     "    \n",
     "    warnings.filterwarnings('ignore')\n",
     "    \n",
@@ -122,7 +122,7 @@
     "    pd.set_option('display.max_columns',999)\n",
     "    \n",
     "    # mount goggle gdrive\n",
-    "    mount_gdrive()"
+    "    mount_gdrive(path_to_ds)"
    ]
   },
   {
