--- a/nbs-dev/00_core.ipynb
+++ b/nbs-dev/00_core.ipynb
@@ -51,7 +51,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.10.6 ('course22p2')",
    "language": "python",
    "name": "python3"
   }
