--- a/nbs-dev/index.ipynb
+++ b/nbs-dev/index.ipynb
@@ -23,7 +23,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This file will become your README and also the index of your documentation."
+    "This package is a utility package used to make it easier for attendees to my guided dive workshop to run jupyter notebooks.\n",
+    "\n",
+    "It will change with no notice, depending on the requirements of ongoing and planned workshops."
    ]
   },
   {
@@ -53,35 +55,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Fill me in please! Don't forget code examples:"
+    "The package is used in prepared jupyter notebooks used during workshops. It is typically not used independently.\n",
+    "\n",
+    "Feel free to fork and adapt to your needs, if you find a use for it."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "2"
-      ]
-     },
-     "execution_count": null,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "1+1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
