add install package features

--- a/nbs-dev/00_core.ipynb
+++ b/nbs-dev/00_core.ipynb
@@ -24,6 +24,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# | export\n",
+    "imported_objects  = ['np', 'pd','shutil', 'Path']\n",
+    "try:\n",
+    "    __all__.extend(imported_objects)\n",
+    "except:\n",
+    "    __all__ = imported_objects"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "#| hide\n",
     "from nbdev.showdoc import *"
    ]
@@ -34,8 +48,52 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
-    "def foo(): pass"
+    "# | export\n",
+    "def mount_gdrive(path_to_ds=None):\n",
+    "\n",
+    "    if path_to_ds is None:\n",
+    "        dataset = Path('/content/gdrive/MyDrive/img-ds.zip')\n",
+    "    else:\n",
+    "        dataset = Path(path_to_ds)\n",
+    "\n",
+    "    try:\n",
+    "        from google.colab import drive\n",
+    "        drive.mount('/content/gdrive')\n",
+    "        if not dataset.is_file():\n",
+    "            raise ValueError(f\"Dataset cannot be found at <{dataset.absolute()}> \")\n",
+    "    except:\n",
+    "        print('This notebook should be run on Google Colab')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# | export\n",
+    "def config_fastai_for_colab(path_to_ds=None):\n",
+    "    \n",
+    "    warnings.filterwarnings('ignore')\n",
+    "    \n",
+    "    # matplotlib settings\n",
+    "    mpl.rcParams['savefig.dpi']= 200\n",
+    "    mpl.rcParams['font.size']=12\n",
+    "    \n",
+    "    # fastai seed\n",
+    "    set_seed(88)\n",
+    "    \n",
+    "    # pytorch settings\n",
+    "    torch.backends.cudnn.deterministic = True\n",
+    "    torch.backends.cudnn.benchmark = False\n",
+    "    torch.set_printoptions(linewidth=200)\n",
+    "\n",
+    "    # numpy and pandas settings\n",
+    "    np.set_printoptions(linewidth=200)\n",
+    "    pd.set_option('display.max_columns',999)\n",
+    "    \n",
+    "    # mount goggle gdrive\n",
+    "    mount_gdrive(path_to_ds)"
    ]
   },
   {
