--- a/nbs-dev/01_vision.ipynb
+++ b/nbs-dev/01_vision.ipynb
@@ -56,11 +56,13 @@
     "import graphviz\n",
     "import matplotlib as mpl\n",
     "import shutil\n",
+    "import subprocess\n",
+    "import sys\n",
     "import torch\n",
     "import warnings\n",
     "\n",
     "from fastai.vision.all import set_seed\n",
-    "from jmd_imagescraper.core import duckduckgo_search\n",
+    "from duckduckgo_search import DDGS\n",
     "from jmd_imagescraper.imagecleaner import display_image_cleaner\n",
     "from pathlib import Path\n",
     "from PIL import Image\n",
@@ -123,6 +125,29 @@
     "    \n",
     "    # mount goggle gdrive\n",
     "    mount_gdrive(path_to_ds)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7faa7296",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# export\n",
+    "def install_package(package_name):\n",
+    "    \"\"\"\n",
+    "    Install a Python package using pip in the current Jupyter Notebook environment.\n",
+    "    \n",
+    "    Parameters:\n",
+    "    package_name (str): The name of the package to install.\n",
+    "    \"\"\"\n",
+    "    try:\n",
+    "        # Run the pip install command\n",
+    "        subprocess.check_call([sys.executable, \"-m\", \"pip\", \"install\", package_name])\n",
+    "        print(f\"Package '{package_name}' installed successfully.\")\n",
+    "    except subprocess.CalledProcessError as e:\n",
+    "        print(f\"Failed to install package '{package_name}'. Error: {e}\")"
    ]
   },
   {
@@ -199,26 +224,26 @@
    "source": [
     "# | export\n",
     "\n",
-    "def print_metrics(cm):\n",
+    "def print_metrics(cm, class_1='OK', class_0='Not OK'):\n",
     "    \"\"\"Print FP, FN, Accuracy, Precision  and Recall\"\"\"\n",
     "    nb_val_im = cm.sum()\n",
     "    true_nb_im_per_class = cm.sum(axis=1)\n",
     "    pred_nb_im_per_class = cm.sum(axis=0)\n",
     "\n",
     "    print(f\"Accurate predictions:               {cm[0,0] + cm[1,1]:3d} out of {nb_val_im:,d} validation images\") \n",
-    "    print(f\"False Positive preds:               {cm[0,1]:3d} images classified as 'without_mask' but actually should be `with_mask`)\")   \n",
-    "    print(f\"False Negative preds:               {cm[1,0]:3d} images classified as `with_mask` but actually should be `without_mask`)\")\n",
+    "    print(f\"False Positive preds:               {cm[0,1]:3d} images classified as `{class_1}` but actually should be `{class_0}`)\")   \n",
+    "    print(f\"False Negative preds:               {cm[1,0]:3d} images classified as `{class_0}` but actually should be `{class_1}`)\")\n",
     "    print()\n",
     "    print(f\"Accuracy:                           {cm.diagonal().sum()/nb_val_im * 100:6.2f} %\") \n",
-    "    print(f\"Precision for 'without_mask' preds: {cm[1, 1]/pred_nb_im_per_class[1] * 100:6.2f} %\")   \n",
-    "    print(f\"Recall for 'without_mask' preds:    {cm[1,1]/true_nb_im_per_class[1] * 100:6.2f} %\")\n",
+    "    print(f\"Precision for '{class_1}' preds: {cm[1, 1]/pred_nb_im_per_class[1] * 100:6.2f} %\")   \n",
+    "    print(f\"Recall for '{class_1}' preds:    {cm[1,1]/true_nb_im_per_class[1] * 100:6.2f} %\")\n",
     "    "
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "course22p2",
    "language": "python",
    "name": "python3"
   }
