--- a/nbs-dev/03_tabular.ipynb
+++ b/nbs-dev/03_tabular.ipynb
@@ -16,7 +16,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# | default_exp vision"
+    "# | default_exp tabular"
    ]
   },
   {
@@ -35,7 +35,7 @@
    "outputs": [],
    "source": [
     "# | export\n",
-    "imported_objects  = ['np', 'pd','shutil', 'Path', 'duckduckgo_search', 'display_image_cleaner']\n",
+    "imported_objects  = ['np', 'pd','shutil', 'Path']\n",
     "try:\n",
     "    __all__.extend(imported_objects)\n",
     "except:\n",
@@ -56,14 +56,9 @@
     "import graphviz\n",
     "import matplotlib as mpl\n",
     "import shutil\n",
-    "import subprocess\n",
-    "import sys\n",
     "import torch\n",
     "import warnings\n",
     "\n",
-    "from fastai.vision.all import set_seed\n",
-    "from duckduckgo_search import DDGS\n",
-    "from jmd_imagescraper.imagecleaner import display_image_cleaner\n",
     "from pathlib import Path\n",
     "from PIL import Image\n",
     "\n",
@@ -130,29 +125,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7faa7296",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# export\n",
-    "def install_package(package_name):\n",
-    "    \"\"\"\n",
-    "    Install a Python package using pip in the current Jupyter Notebook environment.\n",
-    "    \n",
-    "    Parameters:\n",
-    "    package_name (str): The name of the package to install.\n",
-    "    \"\"\"\n",
-    "    try:\n",
-    "        # Run the pip install command\n",
-    "        subprocess.check_call([sys.executable, \"-m\", \"pip\", \"install\", package_name])\n",
-    "        print(f\"Package '{package_name}' installed successfully.\")\n",
-    "    except subprocess.CalledProcessError as e:\n",
-    "        print(f\"Failed to install package '{package_name}'. Error: {e}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "207ca5a1",
    "metadata": {},
    "outputs": [],
@@ -175,29 +147,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fb1f2c1d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# | export\n",
-    "def clean_image_directory(path, verbose=False):\n",
-    "    def check_img(img):\n",
-    "        try: _ = Image.open(img)\n",
-    "        except Exception as e:\n",
-    "            img = str(img).replace(\" \",\"\\ \")\n",
-    "            os.system(f\"rm -f {img}\");\n",
-    "            print(f\"removing error img:{img}\")\n",
-    "\n",
-    "    for cls in path.iterdir():\n",
-    "        for i, img in enumerate(cls.iterdir()):\n",
-    "            if verbose: print(i, end=' - ')\n",
-    "            check_img(img)\n",
-    "            if verbose: print('\\n')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "5b544ea9",
    "metadata": {},
    "outputs": [],
@@ -213,31 +162,6 @@
     "    for d in [d for d in path.iterdir() if d.is_dir()]:\n",
     "        nb_img = len([f for f in d.iterdir() if f.is_file()])\n",
     "        print(f\"{nb_img:,d} in folder {d.name}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d41e68b2",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# | export\n",
-    "\n",
-    "def print_metrics(cm, class_1='OK', class_0='Not OK'):\n",
-    "    \"\"\"Print FP, FN, Accuracy, Precision  and Recall\"\"\"\n",
-    "    nb_val_im = cm.sum()\n",
-    "    true_nb_im_per_class = cm.sum(axis=1)\n",
-    "    pred_nb_im_per_class = cm.sum(axis=0)\n",
-    "\n",
-    "    print(f\"Accurate predictions:               {cm[0,0] + cm[1,1]:3d} out of {nb_val_im:,d} validation images\") \n",
-    "    print(f\"False Positive preds:               {cm[0,1]:3d} images classified as `{class_1}` but actually should be `{class_0}`)\")   \n",
-    "    print(f\"False Negative preds:               {cm[1,0]:3d} images classified as `{class_0}` but actually should be `{class_1}`)\")\n",
-    "    print()\n",
-    "    print(f\"Accuracy:                           {cm.diagonal().sum()/nb_val_im * 100:6.2f} %\") \n",
-    "    print(f\"Precision for '{class_1}' preds: {cm[1, 1]/pred_nb_im_per_class[1] * 100:6.2f} %\")   \n",
-    "    print(f\"Recall for '{class_1}' preds:    {cm[1,1]/true_nb_im_per_class[1] * 100:6.2f} %\")\n",
-    "    "
    ]
   }
  ],
