--- a/nbs-dev/00_core.ipynb
+++ b/nbs-dev/00_core.ipynb
@@ -109,7 +109,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.6 ('course22p2')",
+   "display_name": "python3",
    "language": "python",
    "name": "python3"
   }
