correct import and __all__

--- a/nbs-dev/01_vision.ipynb
+++ b/nbs-dev/01_vision.ipynb
@@ -60,6 +60,7 @@
     "import sys\n",
     "import torch\n",
     "import warnings\n",
+    "import duckduckgo_search\n",
     "\n",
     "from fastai.vision.all import set_seed\n",
     "from duckduckgo_search import DDGS\n",
@@ -238,6 +239,17 @@
     "    print(f\"Precision for '{class_1}' preds: {cm[1, 1]/pred_nb_im_per_class[1] * 100:6.2f} %\")   \n",
     "    print(f\"Recall for '{class_1}' preds:    {cm[1,1]/true_nb_im_per_class[1] * 100:6.2f} %\")\n",
     "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "36290dc4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| hide\n",
+    "import nbdev; nbdev.nbdev_export()"
    ]
   }
  ],
