--- a/nbs-dev/02_diffusion.ipynb
+++ b/nbs-dev/02_diffusion.ipynb
@@ -104,6 +104,16 @@
     "    torch.manual_seed(1)\n",
     "    if not (Path.home()/'.huggingface'/'token').exists(): notebook_login()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dae6b680",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import nbdev; nbdev.nbdev_export()"
+   ]
   }
  ],
  "metadata": {
