--- a/nbs-dev/03_tabular.ipynb
+++ b/nbs-dev/03_tabular.ipynb
@@ -163,6 +163,16 @@
     "        nb_img = len([f for f in d.iterdir() if f.is_file()])\n",
     "        print(f\"{nb_img:,d} in folder {d.name}\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "15c3ff0f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import nbdev; nbdev.nbdev_export()"
+   ]
   }
  ],
  "metadata": {
