--- a/nbs-dev/index.ipynb
+++ b/nbs-dev/index.ipynb
@@ -40,7 +40,7 @@
    "metadata": {},
    "source": [
     "```sh\n",
-    "pip install nb_guided_dive\n",
+    "pip install -U git+https://github.com/vtecftwy/nb-guided-dive.git\n",
     "```"
    ]
   },
