--- a/nbs-dev/00_core.ipynb
+++ b/nbs-dev/00_core.ipynb
@@ -38,8 +38,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| hide\n",
-    "from nbdev.showdoc import *"
+    "#| export\n",
+    "from nbdev import showdoc\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import shutil\n",
+    "from pathlib import Path"
    ]
   },
   {
