--- a/nbs-dev/04_llm.ipynb
+++ b/nbs-dev/04_llm.ipynb
@@ -54,6 +54,8 @@
     "from pathlib import Path\n",
     "from pprint import pprint\n",
     "\n",
+    "from IPython.display import display, Markdown\n",
+    "\n",
     "import matplotlib as mpl\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
